crea pagina - movil recupera contrasena 1

--- a/app/login.html
+++ b/app/login.html
@@ -16,12 +16,12 @@
     <div class="logo-brand">
       <img src="images/logo-aguas.png" alt="aguas andinas">
     </div>
-    <main class="main ">
+    <main class="main">
       <section class="section-login">
         <div class="container">
           <div class="row">
             <div class="col">
-              <h2 class="main-title">Ingresar</h2>
+              <h3 class="second-title">Ingresar</h3>
               <div class="content-page">
                 <div class="box-formulario">
                   <form class="formulario-login">
