update css layout

--- a/app/recuperar-contrasena-1.html
+++ b/app/recuperar-contrasena-1.html
@@ -195,7 +195,7 @@
                         <button type="submit" class="btn btn-block btn-lg btn-verde">Reestablecer mi contraseña</button>
                       </div>
                       <div class="box-volver">
-                        <a href="" class="link-bold">Volver</a>
+                        <a href="login.html" class="link-bold">Volver</a>
                       </div>
                    
                   </form>
