crea page movil recupera tu contrasena 2 - correo

--- a/app/recuperar-contrasena-2.html
+++ b/app/recuperar-contrasena-2.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main-mobil.css">
-  <title>Recuperar contraseña 1</title>
+  <title>Recuperar contraseña 2</title>
 
   <script type="text/javascript">
     var onloadCallback = function() {
@@ -169,28 +169,60 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <h2 class="main-title">Olvide mi contraseña</h2>
-              <div class="content-page-clave">
-                  <form action="" class="formulario-login">
-                    <p>Completa los siguientes datos </p>
-                      <div class="form-group">
-                        <input type="text" class="form-control form-control-lg" placeholder="RUT del titular">
-                      </div>
-                      <div class="box-recapcha">
-                        <div class="texto-capcha">
-                          Validación captcha
+              <div class="content-page-clave-correo">
+                <div class="box-icono-correo">
+                  <svg width="55" height="54" viewBox="0 0 55 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M47.3281 30.375C46.7314 30.375 46.1591 30.6121 45.7371 31.034C45.3152 31.456 45.0781 32.0283 45.0781 32.625V41.625C45.0781 42.2217 44.8411 42.794 44.4191 43.216C43.9972 43.6379 43.4249 43.875 42.8281 43.875H11.3281C10.7314 43.875 10.1591 43.6379 9.73713 43.216C9.31518 42.794 9.07812 42.2217 9.07812 41.625V20.0475L22.3081 33.2775C23.5738 34.5416 25.2894 35.2516 27.0781 35.2516C28.8669 35.2516 30.5825 34.5416 31.8481 33.2775L39.9256 25.2225C40.3493 24.7988 40.5873 24.2242 40.5873 23.625C40.5873 23.0258 40.3493 22.4512 39.9256 22.0275C39.5019 21.6038 38.9273 21.3658 38.3281 21.3658C37.7289 21.3658 37.1543 21.6038 36.7306 22.0275L28.6756 30.105C28.4665 30.3159 28.2176 30.4833 27.9434 30.5975C27.6692 30.7117 27.3752 30.7705 27.0781 30.7705C26.7811 30.7705 26.487 30.7117 26.2128 30.5975C25.9386 30.4833 25.6898 30.3159 25.4806 30.105L12.2506 16.875H38.3281C38.9249 16.875 39.4972 16.6379 39.9191 16.216C40.3411 15.794 40.5781 15.2217 40.5781 14.625C40.5781 14.0283 40.3411 13.456 39.9191 13.034C39.4972 12.6121 38.9249 12.375 38.3281 12.375H11.3281C9.53791 12.375 7.82102 13.0862 6.55515 14.352C5.28928 15.6179 4.57813 17.3348 4.57812 19.125V41.625C4.57813 43.4152 5.28928 45.1321 6.55515 46.398C7.82102 47.6638 9.53791 48.375 11.3281 48.375H42.8281C44.6183 48.375 46.3352 47.6638 47.6011 46.398C48.867 45.1321 49.5781 43.4152 49.5781 41.625V32.625C49.5781 32.0283 49.3411 31.456 48.9191 31.034C48.4972 30.6121 47.9249 30.375 47.3281 30.375ZM47.3281 5.625C46.7314 5.625 46.1591 5.86205 45.7371 6.28401C45.3152 6.70597 45.0781 7.27826 45.0781 7.875V16.875C45.0781 17.4717 45.3152 18.044 45.7371 18.466C46.1591 18.8879 46.7314 19.125 47.3281 19.125C47.9249 19.125 48.4972 18.8879 48.9191 18.466C49.3411 18.044 49.5781 17.4717 49.5781 16.875V7.875C49.5781 7.27826 49.3411 6.70597 48.9191 6.28401C48.4972 5.86205 47.9249 5.625 47.3281 5.625ZM46.8781 21.375C46.7372 21.3996 46.6007 21.4451 46.4731 21.51C46.3297 21.5592 46.1936 21.6273 46.0681 21.7125L45.7306 21.9825C45.3195 22.4137 45.0864 22.9843 45.0781 23.58C45.0671 23.7223 45.0671 23.8652 45.0781 24.0075C45.099 24.1565 45.1446 24.301 45.2131 24.435C45.2624 24.5784 45.3305 24.7146 45.4156 24.84C45.4987 24.9579 45.5889 25.0706 45.6856 25.1775C45.8948 25.3884 46.1436 25.5558 46.4178 25.67C46.692 25.7842 46.9861 25.843 47.2831 25.843C47.5802 25.843 47.8742 25.7842 48.1484 25.67C48.4226 25.5558 48.6715 25.3884 48.8806 25.1775L49.1506 24.84C49.2358 24.7146 49.3039 24.5784 49.3531 24.435C49.4216 24.301 49.4673 24.1565 49.4881 24.0075C49.4991 23.8652 49.4991 23.7223 49.4881 23.58C49.495 23.2425 49.4258 22.9079 49.2857 22.6008C49.1457 22.2937 48.9383 22.022 48.679 21.806C48.4197 21.5899 48.1151 21.4349 47.7878 21.3525C47.4605 21.2701 47.1188 21.2624 46.7881 21.33L46.8781 21.375Z" fill="#2274FF"/>
+                    </svg>
+                </div>
+                <div class="content-correo">
+                  <div class="box-top-correo">
+                    <h4 class="title-nombre"><span>Hola, </span> Julio Esteban Brito</h4>
+                    <p>Enviamos un correo electrónico de restablecimiento 
+                      de contraseña a <span>sof********@gmail.com</span></p>
+                  </div>
+                  <div class="box-texto-correo">
+                    <div class="title-correo">
+                      Lo que debes realizar
+                    </div>
+                    <ul class="lista-realizar">
+                      <li>
+                        <div class="box-circle">
+                          <i class="circle">
+                            1
+                          </i>
                         </div>
-                        <div class="box-captcha">
-                          <div id="html_captcha"></div>
+                        <span>
+                          Revisa tus correos nuevos
+                        </span>
+                      </li>
+                      <li>
+                        <div class="box-circle">
+                          <i class="circle">
+                            2
+                          </i>
                         </div>
-                      </div>
-                      <div class="box-btn">
-                        <button type="submit" class="btn btn-block btn-lg btn-verde">Reestablecer mi contraseña</button>
-                      </div>
-                      <div class="box-volver">
-                        <a href="login.html" class="link-bold">Volver</a>
-                      </div>
-                  </form>
+                        <span>
+                          Abre el correo de cambio de contraseña
+                        </span>
+                      </li>
+                      <li>
+                        <div class="box-circle">
+                          <i class="circle">
+                            3
+                          </i>
+                        </div>
+                        <span>
+                          Haz click en el vínculo que indica el correo para terminar el proceso y cambie la contraseña
+                        </span>
+                      </li>
+                    </ul>
+                    <p>Si no encuentra el correo su bandeja de entrada, revise los correos no deseados o spam</p>
+                  </div>
+                  <div class="box-btn-correo box-btn">
+                    <a href="index.html" class="btn btn-block btn-lg btn-verde"> Volver al home</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
