crea page registro mobile

--- a/app/recuperar-contrasena-2.html
+++ b/app/recuperar-contrasena-2.html
@@ -220,7 +220,7 @@
                     <p>Si no encuentra el correo su bandeja de entrada, revise los correos no deseados o spam</p>
                   </div>
                   <div class="box-btn-correo box-btn">
-                    <a href="index.html" class="btn btn-block btn-lg btn-verde"> Volver al home</a>
+                    <a href="recuperar-contrasena-3.html" class="btn btn-block btn-lg btn-verde"> Volver al home</a>
                   </div>
                 </div>
               </div>
