--- a/app/recuperar-contrasena-3.html
+++ b/app/recuperar-contrasena-3.html
@@ -190,7 +190,8 @@
                     </div>
 
                     <p class="font-italic">La contraseña debe tener un largo mínimo de 8 caracteres y contener al menos una letra mayuscula y un número</p>
-                    <button class="btn btn-block btn-lg btn-restablecer">Reestablecer mi contraseña</button>
+                    <!-- <button class="btn btn-block btn-lg btn-verde">Reestablecer mi contraseña</button> -->
+                    <a href="recuperar-contrasena-5.html" class="btn btn-block btn-lg btn-verde">Reestablecer mi contraseña</a>
                     <div class="mt-4">
                       <a href="login.html" class="link-bold">Volver</a>
                     </div>
