--- a/app/login.html
+++ b/app/login.html
@@ -20,7 +20,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <h3 class="second-title">Ingresar</h3>
+              <h3 class="second-title text-center">Ingresar</h3>
               <div class="content-page">
                 <div class="box-formulario">
                   <form class="formulario-login">
@@ -32,11 +32,11 @@
                         <input type="password" class="form-control form-control-lg" placeholder="Contraseña">
                       </div>
                       <button type="submit" class="btn btn-block btn-lg btn-verde">Continuar</button>
-                      <a href="" class="link mt-4">Olvidé mi contraseña</a>
+                      <a href="recuperar-contrasena-1.html" class="link mt-4">Olvidé mi contraseña</a>
                   </form>
                 </div>
                 <div class="box-redes">
-                  <h3 class="main-title">Ingresar con redes sociales</h3>
+                  <h3 class="main-title text-center">Ingresar con redes sociales</h3>
                   <div class="box-redes-login">
                     <a href="" class="btn btn-redes btn-facebook">
                       <i class="fa fa-facebook"></i>
