--- a/app/registro-mobile-2.html
+++ b/app/registro-mobile-2.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main-mobil.css">
-  <title>Registro mobile 1</title>
+  <title>Registro mobile 2</title>
 </head>
 
 <body class="page page-registro-usuario">
@@ -180,84 +180,47 @@
             <div class="col">
               <h2 class="main-title">Registro de usuarios</h2>
               <div class="content-page-form">
-
                 <div class="box-steps">
                   <div class="step">
                     <div class="step-item active">
                         <a class="step-item-link" href="#!">
                           <span>1</span>
-                          <!-- <span>Registro</span> -->
                         </a>
                         <p>Registro</p>
                     </div>
                     <div class="step-item ">
                         <a class="step-item-link" href="#!">
                           <span>2</span>
-                          <!-- <span>Agregar Cuentas</span> -->
                         </a>
                         <p>Agregar Cuentas</p>
                     </div>
                     <div class="step-item">
                         <a class="step-item-link" href="#!">
-                          <!-- <span>Datos de Usuario</span> -->
                           <span>3</span>
                         </a>
                         <p>Datos de Usuario</p>
                     </div>
                   </div>
                 </div>
-
-                <div class="layout-redes">
-                  <h3 class="second-title">Registro con tus redes sociales</h3>
-                  <div class="box-redes-login">
-                    <a href="" class="btn btn-redes btn-facebook btn-lg">
-                      <i class="fa fa-facebook"></i>
-                    </a>
-                    <a href="" class="btn btn-redes btn-google btn-lg">
-                      <i class="fa fa-google"></i>
-                    </a>
-                    <a href="" class="btn btn-redes btn-twitter btn-lg">
-                      <i class="fa fa-twitter"></i>
-                    </a>
+                <div class="layout-cuenta">
+                  <div class="alert alert-success alert-message" role="alert">
+                    <i>
+                      <svg width="41" height="33" viewBox="0 0 41 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M23.5165 16.91C24.5846 16.0143 25.4413 14.9065 26.0285 13.6618C26.6157 12.4171 26.9195 11.0646 26.9195 9.69609C26.9195 7.12453 25.865 4.65829 23.988 2.83992C22.111 1.02155 19.5652 0 16.9107 0C14.2562 0 11.7104 1.02155 9.83333 2.83992C7.9563 4.65829 6.9018 7.12453 6.9018 9.69609C6.90179 11.0646 7.20567 12.4171 7.79284 13.6618C8.38001 14.9065 9.23672 16.0143 10.3048 16.91C7.50261 18.1392 5.12516 20.1243 3.45671 22.6278C1.78826 25.1314 0.899431 28.0475 0.896484 31.0275C0.896484 31.5418 1.10738 32.035 1.48279 32.3987C1.8582 32.7624 2.36735 32.9667 2.89826 32.9667C3.42916 32.9667 3.93832 32.7624 4.31372 32.3987C4.68913 32.035 4.90003 31.5418 4.90003 31.0275C4.90003 27.9416 6.16543 24.9821 8.41786 22.8001C10.6703 20.618 13.7252 19.3922 16.9107 19.3922C20.0961 19.3922 23.151 20.618 25.4035 22.8001C27.6559 24.9821 28.9213 27.9416 28.9213 31.0275C28.9213 31.5418 29.1322 32.035 29.5076 32.3987C29.883 32.7624 30.3922 32.9667 30.9231 32.9667C31.454 32.9667 31.9631 32.7624 32.3385 32.3987C32.7139 32.035 32.9248 31.5418 32.9248 31.0275C32.9219 28.0475 32.0331 25.1314 30.3646 22.6278C28.6962 20.1243 26.3187 18.1392 23.5165 16.91ZM16.9107 15.5137C15.7229 15.5137 14.5619 15.1725 13.5743 14.5333C12.5867 13.894 11.817 12.9854 11.3625 11.9224C10.9079 10.8594 10.789 9.68963 11.0207 8.56112C11.2525 7.43261 11.8244 6.396 12.6643 5.58239C13.5041 4.76877 14.5742 4.2147 15.7391 3.99022C16.904 3.76574 18.1115 3.88095 19.2088 4.32128C20.3061 4.7616 21.244 5.50726 21.9039 6.46397C22.5638 7.42068 22.916 8.54546 22.916 9.69609C22.916 11.239 22.2833 12.7188 21.1571 13.8098C20.0309 14.9008 18.5034 15.5137 16.9107 15.5137ZM40.3514 10.9178C40.1653 10.736 39.9439 10.5918 39.7 10.4933C39.4561 10.3949 39.1944 10.3442 38.9302 10.3442C38.6659 10.3442 38.4043 10.3949 38.1603 10.4933C37.9164 10.5918 37.695 10.736 37.5089 10.9178L33.5054 14.7962L32.2643 13.5745C32.0782 13.3928 31.8568 13.2485 31.6128 13.15C31.3689 13.0516 31.1073 13.0009 30.843 13.0009C30.5787 13.0009 30.3171 13.0516 30.0732 13.15C29.8292 13.2485 29.6078 13.3928 29.4217 13.5745C29.0489 13.9379 28.8396 14.4294 28.8396 14.9417C28.8396 15.454 29.0489 15.9455 29.4217 16.3088L32.1041 18.9074C32.4792 19.2686 32.9865 19.4713 33.5154 19.4713C34.0442 19.4713 34.5516 19.2686 34.9266 18.9074L40.2714 13.7297C40.4735 13.5538 40.6365 13.34 40.7506 13.1011C40.8646 12.8623 40.9273 12.6034 40.9348 12.3404C40.9423 12.0773 40.8944 11.8155 40.7941 11.571C40.6938 11.3264 40.5432 11.1042 40.3514 10.9178Z" fill="#2274FF"/>
+                      </svg>
+                    </i>
+                    <div class="texto-mensaje">
+                      <h4 class="alert-heading">Ya Casi...</h4>
+                      <p>Te enviamos un email de confirmación para validar tu cuenta 
+                        puedes seguir el registro y completar tus preferencias 
+                        o bien ingresar primero a tu <strong>oficina virtual</strong> y completarlo más adelante.</p>
+                    </div>
+                  </div>
+                  <div class="row-btn dual-btn mt-4 d-flex justify-content-between">
+                    <a href="" class="btn btn-lg btn-verde">Ingresar a mi Oficina virtual</a>
+                    <a href="" class="btn btn-lg  btn-blanco">Seguir configurando</a>
                   </div>
                 </div>
-
-                <div class="layout-formulario">
-                  <form class="formulario-login">
-                    <h3 class="second-title">Registro con tus redes sociales</h3>
-                    <div class="form-group-all">
-                      <div class="form-group">
-                        <input type="text" class="form-control form-control-lg"
-                          placeholder="Nombre de usuario">
-                      </div>
-                      <div class="form-group">
-                        <input type="password" class="form-control form-control-lg" placeholder="Contraseña">
-                      </div>
-                      <div class="form-group">
-                        <input type="password" class="form-control form-control-lg" placeholder="Repetir Contraseña">
-                      </div>
-                      <div class="form-group">
-                        <input type="email" class="form-control form-control-lg" placeholder="Correo electrónico">
-                      </div>
-
-                      <h3 class="second-title">¿Que tipo de usuario eres?</h3>
-                      <div class="dual-btn">
-                        <a href="recupera-contrasena.html" class="btn btn-block btn-lg btn-azul">Persona Natural</a>
-                        <a href="" class="btn btn-block btn-lg btn-blanco">Institución/Empresa</a>
-                      </div>
-                      <div class="box-button mt-5">
-                        <button type="submit" class="btn btn-block btn-block btn-lg btn-verde">Registrame</button>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-                <div class="row-texto-form">
-                  <p>Al crear una cuenta, aceptas las Condiciones de Uso y el Aviso de Privacidad de aguasandinas.cl</p>
-                </div>
-                <div class="box-cuenta">
-                  <p>¿Ya tienes una cuenta? <a href="">Iniciar sesión</a></p>
-                </div>
-
               </div>
             </div>
           </div>
