--- a/app/registro-mobile-3.html
+++ b/app/registro-mobile-3.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main-mobil.css">
-  <title>Registro mobile 1</title>
+  <title>Registro mobile 3</title>
 </head>
 
 <body class="page page-registro-usuario">
@@ -180,84 +180,58 @@
             <div class="col">
               <h2 class="main-title">Registro de usuarios</h2>
               <div class="content-page-form">
-
                 <div class="box-steps">
                   <div class="step">
                     <div class="step-item active">
                         <a class="step-item-link" href="#!">
                           <span>1</span>
-                          <!-- <span>Registro</span> -->
                         </a>
                         <p>Registro</p>
                     </div>
                     <div class="step-item ">
                         <a class="step-item-link" href="#!">
                           <span>2</span>
-                          <!-- <span>Agregar Cuentas</span> -->
                         </a>
                         <p>Agregar Cuentas</p>
                     </div>
                     <div class="step-item">
                         <a class="step-item-link" href="#!">
-                          <!-- <span>Datos de Usuario</span> -->
                           <span>3</span>
                         </a>
                         <p>Datos de Usuario</p>
                     </div>
                   </div>
                 </div>
-
-                <div class="layout-redes">
-                  <h3 class="second-title">Registro con tus redes sociales</h3>
-                  <div class="box-redes-login">
-                    <a href="" class="btn btn-redes btn-facebook btn-lg">
-                      <i class="fa fa-facebook"></i>
-                    </a>
-                    <a href="" class="btn btn-redes btn-google btn-lg">
-                      <i class="fa fa-google"></i>
-                    </a>
-                    <a href="" class="btn btn-redes btn-twitter btn-lg">
-                      <i class="fa fa-twitter"></i>
-                    </a>
-                  </div>
-                </div>
-
-                <div class="layout-formulario">
-                  <form class="formulario-login">
-                    <h3 class="second-title">Registro con tus redes sociales</h3>
-                    <div class="form-group-all">
-                      <div class="form-group">
-                        <input type="text" class="form-control form-control-lg"
-                          placeholder="Nombre de usuario">
-                      </div>
-                      <div class="form-group">
-                        <input type="password" class="form-control form-control-lg" placeholder="Contraseña">
-                      </div>
-                      <div class="form-group">
-                        <input type="password" class="form-control form-control-lg" placeholder="Repetir Contraseña">
-                      </div>
-                      <div class="form-group">
-                        <input type="email" class="form-control form-control-lg" placeholder="Correo electrónico">
-                      </div>
-
-                      <h3 class="second-title">¿Que tipo de usuario eres?</h3>
-                      <div class="dual-btn">
-                        <a href="recupera-contrasena.html" class="btn btn-block btn-lg btn-azul">Persona Natural</a>
-                        <a href="" class="btn btn-block btn-lg btn-blanco">Institución/Empresa</a>
-                      </div>
-                      <div class="box-button mt-5">
-                        <button type="submit" class="btn btn-block btn-block btn-lg btn-verde">Registrame</button>
-                      </div>
+                <div class="layout-cuenta">
+                  <div class="alert alert-danger alert-message" role="alert">
+                    <i>
+                      <svg width="39" height="38" viewBox="0 0 39 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.2894 14.2503C13.9762 14.2503 13.6701 14.3432 13.4097 14.5172C13.1494 14.6911 12.9464 14.9384 12.8266 15.2277C12.7067 15.5171 12.6754 15.8354 12.7365 16.1426C12.7976 16.4497 12.9484 16.7318 13.1698 16.9532C13.3912 17.1747 13.6734 17.3255 13.9805 17.3866C14.2876 17.4477 14.606 17.4163 14.8953 17.2965C15.1846 17.1766 15.4319 16.9737 15.6059 16.7133C15.7799 16.4529 15.8727 16.1468 15.8727 15.8337C15.8727 15.4137 15.7059 15.011 15.409 14.7141C15.112 14.4171 14.7093 14.2503 14.2894 14.2503ZM23.7894 20.5837C22.3781 20.5836 20.9924 20.9608 19.7758 21.6763C18.5593 22.3917 17.5561 23.4194 16.8702 24.6528C16.6638 25.0164 16.6096 25.4468 16.7193 25.8502C16.8291 26.2537 17.0939 26.5973 17.4561 26.8062C17.6927 26.9403 17.9599 27.0112 18.2319 27.012C18.5125 27.0115 18.7879 26.9365 19.0299 26.7946C19.2719 26.6527 19.4719 26.4491 19.6094 26.2045C20.0216 25.4578 20.6273 24.8359 21.3628 24.4041C22.0983 23.9723 22.9365 23.7464 23.7894 23.7503C24.2093 23.7503 24.612 23.5835 24.909 23.2866C25.2059 22.9896 25.3727 22.5869 25.3727 22.167C25.3727 21.7471 25.2059 21.3443 24.909 21.0474C24.612 20.7505 24.2093 20.5837 23.7894 20.5837ZM23.7894 14.2503C23.4762 14.2503 23.1701 14.3432 22.9097 14.5172C22.6494 14.6911 22.4464 14.9384 22.3266 15.2277C22.2067 15.5171 22.1754 15.8354 22.2365 16.1426C22.2976 16.4497 22.4484 16.7318 22.6698 16.9532C22.8912 17.1747 23.1734 17.3255 23.4805 17.3866C23.7876 17.4477 24.106 17.4163 24.3953 17.2965C24.6846 17.1766 24.9319 16.9737 25.1059 16.7133C25.2799 16.4529 25.3727 16.1468 25.3727 15.8337C25.3727 15.4137 25.2059 15.011 24.909 14.7141C24.612 14.4171 24.2093 14.2503 23.7894 14.2503ZM19.0394 3.16699C15.9079 3.16699 12.8466 4.0956 10.2429 5.83539C7.63909 7.57518 5.60969 10.048 4.4113 12.9412C3.21292 15.8343 2.89936 19.0179 3.51029 22.0893C4.12123 25.1606 5.62921 27.9819 7.84354 30.1962C10.0579 32.4105 12.8791 33.9185 15.9505 34.5294C19.0218 35.1404 22.2054 34.8268 25.0986 33.6284C27.9917 32.43 30.4645 30.4006 32.2043 27.7969C33.9441 25.1931 34.8727 22.1319 34.8727 19.0003C34.8727 16.9211 34.4632 14.8622 33.6675 12.9412C32.8718 11.0202 31.7055 9.27473 30.2353 7.80447C28.765 6.33421 27.0195 5.16793 25.0986 4.37223C23.1776 3.57653 21.1187 3.16699 19.0394 3.16699ZM19.0394 31.667C16.5342 31.667 14.0852 30.9241 12.0022 29.5323C9.91915 28.1404 8.29563 26.1622 7.33692 23.8476C6.37821 21.5331 6.12737 18.9863 6.61612 16.5292C7.10486 14.0721 8.31124 11.8151 10.0827 10.0436C11.8542 8.27217 14.1112 7.06579 16.5683 6.57705C19.0253 6.0883 21.5722 6.33914 23.8867 7.29785C26.2013 8.25656 28.1795 9.88008 29.5713 11.9631C30.9632 14.0461 31.7061 16.4951 31.7061 19.0003C31.7061 22.3597 30.3715 25.5816 27.9961 27.957C25.6206 30.3325 22.3988 31.667 19.0394 31.667Z" fill="white"/>
+                      </svg>
+                    </i>
+                    <div class="texto-mensaje">
+                      <p>La dirección de correo electrónico ya está en uso
+                        Has indicado que eres un nuevo cliente, pero ya existe una cuenta con la dirección de correo carolars1988@gmail.com. Si ya tienes una cuenta en aguasandinas.cl, puedes utilizar la misma cuenta y contraseña para acceder a aguasandinas.cl.</p>
                     </div>
-                  </form>
-                </div>
-                <div class="row-texto-form">
-                  <p>Al crear una cuenta, aceptas las Condiciones de Uso y el Aviso de Privacidad de aguasandinas.cl</p>
-                </div>
-                <div class="box-cuenta">
-                  <p>¿Ya tienes una cuenta? <a href="">Iniciar sesión</a></p>
-                </div>
+                  </div>
 
+                  <div class="box-preguntas">
+                    <div class="item-pregunta">
+                      <h4 class="title-pregunta">¿Ya eres cliente de Aguas Andinas?</h4>
+                      <a href="">Inicia sesión</a>
+                      <a href="">¿Olvidaste tu contraseña?</a>
+                    </div>
+                    <div class="item-pregunta">
+                      <h4 class="title-pregunta">¿Eres nuevo en Aguas Andinas?</h4>
+                      <p>Crear una nueva cuenta con <span> una dirección de correo electrónico diferente</span></p>
+                    </div>
+                    <div class="item-pregunta">
+                      <h4 class="title-pregunta">¿Sigue necesitando ayuda?</h4>
+                      <a href="">Contacta con Atención al cliente</a>
+                    </div>
+                  </div>
+
+                </div>
               </div>
             </div>
           </div>
