--- a/descarga-tu-boleta-1.html
+++ b/descarga-tu-boleta-1.html
@@ -829,7 +829,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4">
-              <div class="item-dato">
+              <div class="item-footer-dato">
                 <i>
                   <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M18.75 2C9.22406 2 1.5 9.72406 1.5 19.25C1.5 28.7759 9.22406 36.5 18.75 36.5C28.2759 36.5 36 28.7759 36 19.25C36 9.72406 28.2759 2 18.75 2Z" stroke="#003DA5" stroke-width="3" stroke-miterlimit="10"/>
@@ -842,7 +842,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="item-dato">
+              <div class="item-footer-dato">
                 <i>
                   <svg width="49" height="48" viewBox="0 0 49 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M24.5 4.5C17.0469 4.5 11 10.2553 11 17.3438C11 25.5 20 38.4253 23.3047 42.8897C23.4419 43.0781 23.6217 43.2315 23.8294 43.3372C24.0371 43.443 24.2669 43.4981 24.5 43.4981C24.7331 43.4981 24.9629 43.443 25.1706 43.3372C25.3783 43.2315 25.5581 43.0781 25.6953 42.8897C29 38.4272 38 25.5066 38 17.3438C38 10.2553 31.9531 4.5 24.5 4.5Z" stroke="#003DA5" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
@@ -853,7 +853,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="item-dato">
+              <div class="item-footer-dato">
                 <i>
                   <svg width="43" height="43" viewBox="0 0 43 43" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M39.7813 32.0634C38.2925 30.5634 34.6869 28.3743 32.9375 27.4921C30.6594 26.3446 30.4719 26.2509 28.6813 27.5812C27.4869 28.469 26.6929 29.2621 25.295 28.964C23.8972 28.6659 20.8597 26.9849 18.2 24.3337C15.5404 21.6824 13.7619 18.5568 13.4629 17.1637C13.1638 15.7705 13.97 14.9859 14.8494 13.7887C16.0888 12.1012 15.995 11.8199 14.9357 9.5418C14.1097 7.76992 11.8569 4.19804 10.3513 2.71679C8.74067 1.12586 8.74067 1.40711 7.70286 1.83836C6.85796 2.19385 6.04739 2.62596 5.2813 3.12929C3.7813 4.12586 2.9488 4.95367 2.36661 6.19773C1.78442 7.44179 1.52286 10.3584 4.52942 15.8202C7.53599 21.2821 9.64536 24.0749 14.0113 28.4287C18.3772 32.7824 21.7344 35.1234 26.6422 37.8759C32.7135 41.2762 35.0422 40.6134 36.2901 40.0321C37.5379 39.4509 38.3694 38.6259 39.3679 37.1259C39.8725 36.3611 40.3056 35.5514 40.6616 34.7071C41.0938 33.673 41.375 33.673 39.7813 32.0634Z" stroke="#003DA5" stroke-width="3" stroke-miterlimit="10"/>
