se completa pagina formulario 2

--- a/app/registro-mobile-formulario-2.html
+++ b/app/registro-mobile-formulario-2.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main-mobil.css">
-  <title>Registro mobile 1</title>
+  <title>Registro formulario 2</title>
 </head>
 
 <body class="page page-registro-usuario">
@@ -209,47 +209,54 @@
 
                 <div class="layout-formulario">
                   <form class="formulario-registro">
-                    <h3 class="second-title">Completar datos personales</h3>
+                    <h3 class="second-title">Datos de la empresa</h3>
                     <div class="form-group-all">
+                      <div class="form-group">
+                        <input type="text" class="form-control form-control-lg" placeholder="Rut empresa/usuario">
+                      </div>
+                      <div class="form-group">
+                        <input type="text" class="form-control form-control-lg" placeholder="Razón social">
+                      </div>
+                      <div class="form-group">
+                        <input type="text" class="form-control form-control-lg" placeholder="Teléfono">
+                      </div>
+                      <div class="form-group">
+                        <input type="text" class="form-control form-control-lg" placeholder="Correo electrónico">
+                      </div>
+                      <div class="form-group">
+                        <select class="form-control form-control-lg">
+                          <option>Perfil empresa</option>
+                          <option>perfil 1</option>
+                          <option>perfil 2</option>
+                        </select>
+                      </div>
+                      
+                      <h3 class="second-title">Datos persona de contacto</h3>
+                      <div class="form-group">
+                        <input type="text" class="form-control form-control-lg" placeholder="Rut">
+                      </div>
                       <div class="form-group">
                         <input type="text" class="form-control form-control-lg" placeholder="Nombre">
                       </div>
                       <div class="form-group">
-                        <input type="text" class="form-control form-control-lg" placeholder="Apellidos">
+                        <input type="text" class="form-control form-control-lg" placeholder="Apellido paterno">
                       </div>
                       <div class="form-group">
-                        <input type="text" class="form-control form-control-lg" placeholder="Número de documento">
+                        <input type="text" class="form-control form-control-lg" placeholder="Apellido materno">
                       </div>
                       <div class="form-group">
-                        <input type="text" class="form-control form-control-lg" placeholder="Telefono celular">
-                      </div>
-                      <div class="form-group">
-                        <select class="form-control form-control-lg">
-                          <option>Genero</option>
-                          <option>Hombre</option>
-                          <option>Mujer</option>
-                        </select>
+                        <input type="text" class="form-control form-control-lg" placeholder="Cargo">
                       </div>
                       <div class="form-group">
                         <select class="form-control form-control-lg">
-                          <option>Tipo de usuario</option>
-                          <option>usuario 1</option>
-                          <option>usuario 2</option>
+                          <option>Género</option>
+                          <option>Masculino</option>
+                          <option>Femenino</option>
                         </select>
                       </div>
-                      <div class="form-group">
-                        <select class="form-control form-control-lg">
-                          <option>Cantidad de integrantes en mi hogar</option>
-                          <option>4</option>
-                          <option>6</option>
-                        </select>
-                      </div>
-                      <p class="text-form mb-5">Ingresar la cantidad de personas que viven en mi hogar, para que la visualización de tu consumo se vea evidenciada bajo los parámetros dictados</p>
                       
-                      <h3 class="second-title">¿Que tipo de usuario eres?</h3>
-
+                      <h3 class="second-title">Selecciona tus áres de interés</h3>
                       <div class="lista-switch">
-
                         <div class="item-switch">
                           <div class="box-switch inline-switch">
                             <label class="custom-control-label" for="consumoSwitches">Mejorar el consumo y el correcto uso del agua</label>
