refactoring scss sass module

--- a/app/recuperar-contrasena-1.html
+++ b/app/recuperar-contrasena-1.html
@@ -180,7 +180,7 @@
                         <div class="texto-capcha">
                           Validación captcha
                         </div>
-                        <div class="box-captcha">
+                        <div class="iframe-captcha">
                           <div id="html_captcha"></div>
                         </div>
                       </div>
