--- a/app/registro-mobile-natural.html
+++ b/app/registro-mobile-natural.html
@@ -237,7 +237,11 @@
                                 
                             </div>
                           </div>
-                          <input type="text" class="form-control input-busqueda" placeholder="Buscar por dirección">
+                          <input type="text" class="form-control input-busqueda" placeholder="Buscar por dirección" data-toggle="modal" data-target="#exampleModal">
+                          <!-- Button trigger modal -->
+                         <!--  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                            Launch demo modal
+                          </button> -->
                         </div>
                       </div>
                       
@@ -281,7 +285,47 @@
       </section>
     </main>
   </div>
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="modal-title">
+            Buscar dirección
+          </div>
+          <form class="formulario-registro">
+            <div class="form-group-all">
+              <div class="form-group">
+                <select class="form-control form-control-lg">
+                  <option>Comuna</option>
+                  <option>comuna 1</option>
+                  <option>comuna 2</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control form-control-lg" placeholder="Calle">
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control form-control-lg" placeholder="Número">
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control form-control-lg" placeholder="Departamento">
+              </div>
+              <div class="box-button">
+                <button type="submit" class="btn btn-block btn-block btn-lg btn-verde">Guardar</button>
+              </div>
+              <p class="text-center mt-3 px-30"> El campo departamento sólo admite números, en el caso registrar combinación con letras, al ingresar la numeración se desplegarón todas las combinaciones u opciones existentes en su comunidad.</p>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
 
   <!--  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
