se agrega page home mobil

--- a/app/index.html
+++ b/app/index.html
@@ -261,6 +261,10 @@
                     10.00
                   </div>
                 </div>
+
+                <div class="tab-grafica mt-5">
+
+                </div>
                 
               </div>
             </div>
