agrega grafica home

--- a/app/index.html
+++ b/app/index.html
@@ -637,15 +637,98 @@
                   </div>
                 </div>
 
-                <div class="tab-grafica mt-5">
+               <!--  <div class="tab-grafica mt-5">
 
-                </div>
+                </div> -->
                 
               </div>
             </div>
           </div>
         </div>
       </section>
+      <section class="section-mapa">
+        <div class="consumo-grafica">
+          <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" id="consumo-tab" data-toggle="tab" href="#consumo" role="tab" aria-controls="consumo" aria-selected="true">Consumo del mes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="monto-tab" data-toggle="tab" href="#monto" role="tab" aria-controls="monto" aria-selected="false">Monto del mes</a>
+            </li>
+          </ul>
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="consumo" role="tabpanel" aria-labelledby="consumo-tab">
+
+              <div class="detalle-compra">
+                <div class="box-compara">
+                  <div class="title-compara"> Comparar año </div>
+                  <div class="item-switch">
+                    <div class="box-switch inline-switch">
+                      <label class="custom-control-label pr-2" for="compraSwitches">Puedes comparar tu consumo durante los años de servicio</label>
+                      <label class="switch custom-switch">
+                        <input type="checkbox" id="compraSwitches">
+                        <span class="slider round"></span>
+                      </label>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row-select">
+                  <div class="form-group">
+                    <select class="form-control form-control-lg">
+                      <option>2020-2021</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <select class="form-control form-control-lg">
+                      <option>2020-2021</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+
+              <div class="grafica-periodo">
+                <img src="images/grafica-periodo.png"> 
+              </div>  
+
+            </div>
+            <div class="tab-pane fade" id="monto" role="tabpanel" aria-labelledby="monto-tab">
+              <div class="detalle-compra">
+                <div class="box-compara">
+                  <div class="title-compara"> Comparar año </div>
+                  <div class="item-switch">
+                    <div class="box-switch inline-switch">
+                      <label class="custom-control-label pr-2" for="compraSwitches">Puedes comparar tu consumo durante los años de servicio</label>
+                      <label class="switch custom-switch">
+                        <input type="checkbox" id="compraSwitches">
+                        <span class="slider round"></span>
+                      </label>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row-select">
+                  <div class="form-group">
+                    <select class="form-control form-control-lg">
+                      <option>2020-2021</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <select class="form-control form-control-lg">
+                      <option>2020-2021</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+
+              <div class="grafica-periodo">
+                <img src="images/grafica-periodo.png"> 
+              </div> 
+            </div>
+          </div>
+        </div>
+      </section> 
+      
     </main>
   </div>
 
