se agrega educa boleta 2

--- a/app/educar-boleta-2.html
+++ b/app/educar-boleta-2.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main-mobil.css">
-  <title>Educar boleta 1</title>
+  <title>Educar boleta 2</title>
 </head>
 
 <body class="page page-educar-boleta">
@@ -574,24 +574,29 @@
                 <form action="" class="form-descarga-boleta">
                   <div class="row row-btn-boleta">
                     <div class="col">
-                      <a href="" class="btn btn-lg btn-block btn-azul">Buscar por número de cuenta</a>
+                      <a href="" class="btn btn-lg btn-block btn-blanco">Buscar por número de cuenta</a>
                     </div>
                     <div class="col">
-                      <a href="" class="btn btn-lg btn-block btn-blanco">Buscar por dirección</a>
+                      <a href="" class="btn btn-lg btn-block btn-azul">Buscar por dirección</a>
                     </div>
                     <div class="col">
                       <a href="" class="btn btn-lg btn-block btn-blanco">Usar una boleta de ejemplo</a>
                     </div>
                   </div>
-                  <div class="row justify-content-between mb-4">
-                    <div class="col-btn">
-                      <input type="text" class="form-control form-control-lg mt-3" id="inputCuenta" placeholder="Número de cuenta (*)">
-                      <ul class="list-input">
-                        <li>Ingresa el número de cuenta sin el dígito verificador</li>
-                        <li>Los campos marcados con asterisco (*) son obligatorios</li>
-                      </ul>
+                  <div class="row d-block">
+                    <div class="form-group">
+                      <input type="text" class="form-control form-control-lg" placeholder="Comuna">
                     </div>
-                
+                    <div class="form-group">
+                      <input type="text" class="form-control form-control-lg" placeholder="Calle">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control form-control-lg" placeholder="Número">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control form-control-lg" placeholder="Departamento">
+                    </div>
+                   
                     <div class="col">
                       <button type="submit" class="btn btn-lg btn-block btn-verde">Buscar</button>
                     </div>
