--- a/app/educar-boleta-1.html
+++ b/app/educar-boleta-1.html
@@ -529,7 +529,7 @@
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item"><a href="#">Web</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Registro de usuarios</li>
+                  <li class="breadcrumb-item active" aria-current="page">Desglose de boleta</li>
                 </ol>
               </nav>
             </div>
@@ -560,6 +560,7 @@
           </div>
         </div>
       </section>
+
       <section class="section-boleta">
         <div class="container">
           <div class="row">
@@ -573,18 +574,12 @@
                 </div>
                 <form action="" class="form-descarga-boleta">
                   <div class="row row-btn-boleta">
-                    <div class="col">
-                      <a href="" class="btn btn-lg btn-block btn-azul">Buscar por número de cuenta</a>
-                    </div>
-                    <div class="col">
-                      <a href="" class="btn btn-lg btn-block btn-blanco">Buscar por dirección</a>
-                    </div>
-                    <div class="col">
-                      <a href="" class="btn btn-lg btn-block btn-blanco">Usar una boleta de ejemplo</a>
-                    </div>
+                    <a href="" class="btn btn-lg btn-block btn-azul">Buscar por número de cuenta</a>
+                    <a href="" class="btn btn-lg btn-block btn-blanco">Buscar por dirección</a>
+                    <a href="" class="btn btn-lg btn-block btn-blanco">Usar una boleta de ejemplo</a>
                   </div>
                   <div class="row justify-content-between mb-4">
-                    <div class="col-btn">
+                    <div class="group-input">
                       <input type="text" class="form-control form-control-lg mt-3" id="inputCuenta" placeholder="Número de cuenta (*)">
                       <ul class="list-input">
                         <li>Ingresa el número de cuenta sin el dígito verificador</li>
@@ -592,7 +587,7 @@
                       </ul>
                     </div>
                 
-                    <div class="col">
+                    <div class="group-input">
                       <button type="submit" class="btn btn-lg btn-block btn-verde">Buscar</button>
                     </div>
                   </div>
@@ -632,7 +627,7 @@
                     <path d="M39.7813 32.0634C38.2925 30.5634 34.6869 28.3743 32.9375 27.4921C30.6594 26.3446 30.4719 26.2509 28.6813 27.5812C27.4869 28.469 26.6929 29.2621 25.295 28.964C23.8972 28.6659 20.8597 26.9849 18.2 24.3337C15.5404 21.6824 13.7619 18.5568 13.4629 17.1637C13.1638 15.7705 13.97 14.9859 14.8494 13.7887C16.0888 12.1012 15.995 11.8199 14.9357 9.5418C14.1097 7.76992 11.8569 4.19804 10.3513 2.71679C8.74067 1.12586 8.74067 1.40711 7.70286 1.83836C6.85796 2.19385 6.04739 2.62596 5.2813 3.12929C3.7813 4.12586 2.9488 4.95367 2.36661 6.19773C1.78442 7.44179 1.52286 10.3584 4.52942 15.8202C7.53599 21.2821 9.64536 24.0749 14.0113 28.4287C18.3772 32.7824 21.7344 35.1234 26.6422 37.8759C32.7135 41.2762 35.0422 40.6134 36.2901 40.0321C37.5379 39.4509 38.3694 38.6259 39.3679 37.1259C39.8725 36.3611 40.3056 35.5514 40.6616 34.7071C41.0938 33.673 41.375 33.673 39.7813 32.0634Z" stroke="#003DA5" stroke-width="3" stroke-miterlimit="10"/>
                     </svg>
                 </i>
-                <span>Llá manos al <a href="tel:600 234 2983">600 234 2983</a> </span>
+                <span><span class="small">Llámanos al </span><a href="tel:600 234 2983">600 234 2983</a> </span>
               </div>
             </div>
           </div>
